--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">lab4</string>
-    <string-array name="spinner2">
+    <string-array name="gatunek">
         <item>Pies</item>
         <item>Kot</item>
         <item>Niedźwiedź</item>
